Refactoring pagination logic
